# roundup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: main.rs
src/api/: eztv.rs  imdb.rs  mod.rs  moviedb.rs  plex.rs  therarbg.rs  torrent.rs  waf.rs  watchlist.rs  youtube.rs  yts.rs
src/api/torrent_client/: mod.rs  qbittorrent.rs  transmission.rs
src/database/: imdb.rs  mod.rs  torrent.rs  watchlist.rs
src/database/sql/: excluded_files.sql  imdb.sql  media_type.sql  torrent.sql  watchlist.sql
src/db/: downloads.rs  imdb.rs  initialiser.rs  mod.rs  moviedb.rs  oauth.rs  session_psql.rs  user.rs
src/db/sql/: downloads.sql  imdb.sql  item_type.sql  moviedb.sql  oauth.sql  session_store.sql  user_type.sql  users.sql
src/managers/: mod.rs  plex.rs  torrent.rs
src/scrapers/: imdb.rs  mod.rs  yts.rs
src/server/: auth.rs  components.rs  download.rs  mod.rs  query.rs
src/server/api/: download.rs  mod.rs  search.rs
src/server/middleware/: has_auth.rs  is_admin.rs  mod.rs
src/torrent/: mod.rs  qbittorrent.rs
static/: index.html  manifest.json  styles.css
static/icons/: icons.json
