[package]
name = "roundup"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.2"
futures = "0.3.30"
qbittorrent = { git = "https://github.com/0xlunar/qbittorrent.git", rev = "58015db" }
regex = "1.10.3"
reqwest = "0.11.24"
ring = "0.17.8"
rustls = { version = "0.22.3" }
scraper = "0.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
urlencoding = "2.1.3"
rustls-pemfile = "2.1.2"
log = "0.4.21"
rayon = "1.10.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
xmltree = "0.10.3"
