[package]
name = "roundup"
version = "0.1.4"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.2"
futures = "0.3.30"
qbittorrent = { git = "https://github.com/0xlunar/qbittorrent.git", rev = "c084822" }
regex = "1.10.3"
ring = "0.17.8"
rustls = { version = "0.22.3" }
scraper = "0.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
urlencoding = "2.1.3"
rustls-pemfile = "2.1.2"
log = "0.4.21"
rayon = "1.10.0"
console-subscriber = "0.2.0"
parking_lot = { version = "0.12.3", features = ["arc_lock", "send_guard"] }
rquest = { version = "5.1.0", features = ["gzip", "zstd", "brotli", "deflate", "cookies", "json"] }
rquest-util = "2.3.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(unix)'.dependencies]
xmltree = "0.10.3"

[target.'cfg(macos)'.dependencies]
plist = "1.6.1"
