[package]
name = "roundup"
version = "0.2.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.9"
actix-web = { version = "4.12.1", features = [] }
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
regex = "1.12.2"
wreq = { version = "6.0.0-rc.23", features = ["json", "cookies", "multipart", "zstd", "gzip", "deflate", "brotli"] }
wreq-util = "3.0.0-rc.7"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
urlencoding = "2.1.3"
log = "0.4.28"
rayon = "1.11.0"
log4rs = "1.4.0"
flume = "0.12.0"
config_updater = "0.1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
itertools = "0.14.0"
#parking_lot = { version = "0.12.5", features = ["arc_lock", "send_guard"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(unix)'.dependencies]
xmltree = "0.12.0"

[target.'cfg(macos)'.dependencies]
plist = "1.8.0"
